Fix nav bar links alignment and styling

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,7 @@
 /* ----- Nav ------ */
 
 nav {
+  position: relative;
   height: 100vh;
   background-color: rgb(63, 63, 156);
   color: rgb(255, 255, 255);
@@ -8,6 +9,40 @@ nav {
   display: flex;
   flex-direction: column;
   width: 170px;
+}
+
+.links-list {
+  position: absolute;
+  left: -1rem;
+  list-style: none;
+  padding: 10px 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-right: 1.2rem;
+  gap: 0.6rem;
+  width: 118%;
+}
+
+.links-list > li {
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
+  text-decoration: none;
+  padding: 8px 6px;
+  width: 100%;
+}
+
+.links-list > li:hover {
+  background-color: black;
+  background-color: rgb(72, 72, 183);
+  box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.1);
+}
+
+.links-list > span {
+  margin-left: 0.5rem;
+  width: 100%;
 }
 
 nav .logo-container,
@@ -21,13 +56,6 @@ nav .logo-container img {
   width: 120px;
 }
 
-.links {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  gap: 15px;
-}
-
 .people-divider,
 .company-divider {
   display: flex;
@@ -38,107 +66,10 @@ nav .logo-container img {
   font-size: 11px;
 }
 
-.company-divider {
-  margin-right: 6.3rem !important;
-}
-
-.dashboard-link {
-  display: flex;
-  margin-top: 1rem;
-  gap: 10px;
-  margin-right: 3rem;
-  padding: 0.5em 3.4rem;
-  transition: 0.3s;
-}
-
-.employee-link {
-  display: flex;
-  gap: 10px;
-  margin-right: 3rem;
-  padding: 0.5em 3.4rem;
-  transition: 0.3s;
-}
-
-.team-link {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  margin-right: 5.5rem;
-  padding: 0.5rem 5.9rem;
-  transition: 0.3s;
-}
-
-.vacation-link {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  margin-right: 3.9rem;
-  padding: 0.5rem 4.4rem;
-  transition: 0.3s;
-}
-
-.expenses-link {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  margin-right: 3.4rem;
-  padding: 0.5rem 3.9rem;
-  transition: 0.3s;
-}
-
-.company-link {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  margin-right: 3.4rem;
-  padding: 0.5rem 3.9rem;
-  transition: 0.3s;
-}
-
-.documents-link {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  margin-right: 2.3rem;
-  padding: 0.5rem 3rem;
-  transition: 0.3s;
-}
-
-.settings-link {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  margin-right: 3.7rem;
-  padding: 0.5rem 4.4rem;
-  transition: 0.3s;
-}
-
-.help-link {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  margin-right: 5.4rem;
-  padding: 0.5rem 6rem;
-  transition: 0.3s;
-}
-
 .account-container {
   display: flex;
   align-items: center;
   margin-top: auto;
-}
-
-.dashboard-link:hover,
-.employee-link:hover,
-.team-link:hover,
-.vacation-link:hover,
-.expenses-link:hover,
-.company-link:hover,
-.documents-link:hover,
-.settings-link:hover,
-.help-link:hover {
-  background-color: rgb(72, 72, 183);
-  box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.1);
 }
 
 nav .icon {
